<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_gles10"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_gles10" />
        <item
            android:id="@+id/navigation_customizeshader"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_customizeshader" />

        <item
            android:id="@+id/navigation_texture"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_texture" />

        <item
            android:id="@+id/navigation_3d"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_3d" />

        <item
            android:id="@+id/navigation_texture_mapping"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/texture_mapping" />

        <item
            android:id="@+id/navigation_lighting"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/lighting" />

        <item
            android:title="@string/filter" >
            <menu>
                <item
                    android:id="@+id/edgeDetect"
                    android:icon="@drawable/ic_menu_send"
                    android:title="边缘检测"/>

                <item
                    android:id="@+id/pixelize"
                    android:icon="@drawable/ic_menu_send"
                    android:title="像素化"/>

                <item
                    android:id="@+id/waterColor"
                    android:icon="@drawable/ic_menu_send"
                    android:title="水彩画"/>

                <item
                    android:id="@+id/aberration"
                    android:icon="@drawable/ic_menu_send"
                    android:title="幻影"/>

                <item
                    android:id="@+id/relief"
                    android:icon="@drawable/ic_menu_send"
                    android:title="浮雕"/>

                <item
                    android:id="@+id/blur"
                    android:icon="@drawable/ic_menu_send"
                    android:title="高斯模糊"/>

                <item
                    android:id="@+id/test"
                    android:icon="@drawable/ic_menu_send"
                    android:title="测试"/>
            </menu>
        </item>

        <item android:title="@string/shadertoy">
            <menu>
                <item
                    android:id="@+id/gradient"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Gradient"/>
                <item
                    android:id="@+id/gradient2"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Gradient2"/>
                <item
                    android:id="@+id/heartbeat"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Heartbeat"/>

                <item
                    android:id="@+id/seascape"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Seascape"/>

                <item
                android:id="@+id/cloud"
                android:icon="@drawable/ic_menu_send"
                android:title="Cloud"/>

                <item
                    android:id="@+id/hexagone"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Hexagone"/>


                <item
                    android:id="@+id/cloud2d"
                    android:icon="@drawable/ic_menu_send"
                    android:title="2D Cloud"/>

                <item
                    android:id="@+id/mandelbrot"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Mandelbrot"/>

                <item
                    android:id="@+id/goo"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Goo"/>
            </menu>
        </item>
    </group>


</menu>
